--- a/privacy.html
+++ b/privacy.html
@@ -48,11 +48,11 @@
     <ol>
         <li>
             <p><strong>a. User Account Information</strong></p>
-            <p>When you sign in with your registered Gmail ID, we collect basic account information to provide you with access to our app.</p>
+            <p>When you sign in with your registered Gmail ID, we collect basic account information [like : user name, email,photo] to provide you with access to our app.</p>
         </li>
         <li>
             <p><strong>b. Google Drive Files</strong></p>
-            <p>Our app allows you to import and modify text files (.txt) from your Google Drive. We only access and process files with the .txt extension.</p>
+            <p>Our app allows you to import files (.txt filtered) from your Google Drive. We only access and process files with the .txt extension.</p>
         </li>
     </ol>
 
