--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
     <ol>
         <li>
             <p><strong>a. User Account Information</strong></p>
-            <p>When you sign in with your registered Gmail ID, we collect basic account information [like : user name, email,photo] to provide you with access to our app.</p>
+            <p>When you sign in with your registered Gmail ID, we collect basic account information [userName, email,photo] to provide you with access to our app.</p>
         </li>
         <li>
             <p><strong>b. Google Drive Files</strong></p>
