--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your App Name</title>
+    <title>Store Inventory</title>
     <style>
         /* Your styles go here */
         body {
@@ -47,8 +47,8 @@
     }
 
         footer {
-            background-color: #333;
-            color: #fff;
+            background-color: white;
+            color: #000;
             text-align: center;
             padding: 1em;
             position: fixed;
@@ -191,8 +191,9 @@
     </section>
 
     <footer>
-        &copy; 2024 Store Inventory. All rights reserved.
-    </footer>
+        &copy; 2024 Store Inventory. All rights reserved. | <a href="https://htmlpreview.github.io/?https://github.com/Bukhara-Store-Inventory/bukhara-store-inventory/blob/main/privacy.html" target="_blank">Privacy Policy</a>
+    </footer> 
+    
 </body>
 
 </html>
